# shairport-sync

./: .gitignore  .project  .travis.yml  AIRPLAY2.md  Android.mk  BUILD.md  BUILDFORAP2.md  CAR INSTALL.md  CONFIGURATION FLAGS.md  CONFIGURATIONFILECHANGES5.md  FREEBSD.md  GENTOO.md  INSTALL.md  LIBSOXR.md  MQTT.md  Makefile.am  README.md  RELEASENOTES-DEVELOPMENT.md  RELEASENOTES.md  TROUBLESHOOTING.md  UPDATING.md  activity_monitor.c  alac.c  ap2_buffered_audio_processor.c  ap2_buffered_audio_processor.h  ap2_event_message_handler.c  ap2_event_message_handler.h  ap2_event_receiver.c  ap2_event_receiver.h  ap2_rc_event_receiver.c  ap2_rc_event_receiver.h  apple_alac.c  apple_alac.cpp  apple_alac.h  audio.c  audio.h  audio_alsa.c  audio_ao.c  audio_coreaudio.c  audio_dummy.c  (+57 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_classic_linux_armv7.yml  build_classic_mac_intel.yml  check_ap2_mac_experimental.yml  check_ap2_systemd_basic.yml  check_ap2_systemd_full.yml  check_ap2_systemd_full_build_folder.yml  check_ap2_systemv_full.yml  check_classic_mac_basic.yml  check_classic_systemd_basic.yml  check_classic_systemd_full.yml  docker-build-on-push.yaml  docker-build-on-push_and_pull_request.yaml  docker-build-on-tag.yaml  docker-on-push-tag-or-pr.yaml  docker-vars.yaml  docker.yaml  docker_dmuiX  docker_dmuiX.yml  stale.yaml
ADVANCED TOPICS/: AdjustingSync.md  GetTheBest.md  InitialConfiguration.md  PulseAudioAndPipeWire.md  README.md  Statistics.md
FFTConvolver/: AudioFFT.cpp  ConvolverThreadPool.cpp  ConvolverThreadPool.h  FFTConvolver.cpp  FFTConvolver.h  convolver.cpp  convolver.h
debian/: changelog  control  copyright  lintian-overrides  rules
debian/patches/: series
docker/: Dockerfile  README.md  docker-compose.yaml  run.sh
docker/classic/: Dockerfile  run.sh
docker/etc/cont-init.d/: 10-dbus
docker/etc/s6-overlay/s6-rc.d/01-dbus/: run
docker/etc/s6-overlay/s6-rc.d/02-avahi/: run
docker/etc/s6-overlay/s6-rc.d/02-dbus/: run
docker/etc/s6-overlay/s6-rc.d/03-avahi/: run
docker/etc/services.d/avahi/: run
docker/etc/services.d/dbus/: run
docker/etc/services.d/shairport-sync/: run
documents/: D-Bus.md  sample dbus commands
droid-lacks-include/: ifaddrs.h  libconfig.h  popt.h
droid-lacks-src/: ifaddrs.c  ifaddrs.h  random.c  stpcpy.c
libconfig-1.5/lib/: Android.mk
libpopt/: Android.mk
man/: Makefile  Makefile.am  shairport-sync.7  shairport-sync.7.xml  shairport-sync.html
metadata/: core.c  core.h  hub.c  hub.h  multicast.c  multicast.h  pc_queue.c  pc_queue.h  pipe.c  pipe.h
pair_ap/: pair-internal.h  pair.c  pair.h  pair_fruit.c  pair_homekit.c
patches/: README.md  nqptp-darwin.patch
plists/: get_info_response.xml
scripts/: shairport-sync-install-or-update-raspberry-pi  shairport-sync.conf  shairport-sync.in  shairport-sync.service-avahi.in  shairport-sync.service.in  shairport-sync.user.service
scripts/arch/: PKGBUILD  shairport-sync.service
scripts/init/systemd/: shairport-sync.service
utilities/: buffered_read.c  buffered_read.h  debug.c  generate_device_uuid.c  generate_device_uuid.h  generate_random_uuid.c  generate_random_uuid.h  mod23.c  mod23.h  network_utilities.c  network_utilities.h  rtsp_message_utilities.c  rtsp_message_utilities.h  structured_buffer.c  structured_buffer.h
